# Sarvesh-Kumar

./: Ball.xml  Decision_Trees.ipynb  KMeans.ipynb  Linear Regression .ipynb  Logistic Regression.ipynb  README.md  Untitled.ipynb  ball_detection.ipynb  linear regression.ipynb  neuralnetworks.ipynb  pathfinder.cpp  regression.ipynb
ROS/: CMakeLists.txt  package.xml
